DAT-55: Implement Read Workflow Engine